service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
  namespace: default
  labels:
    app: test
spec:
  selector:
    app: test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
#  type: ClusterIP
